Implemented test Login
